--- a/DarkAccess/Front-End/src/components/Narrator/Narrator.module.css
+++ b/DarkAccess/Front-End/src/components/Narrator/Narrator.module.css
@@ -1,9 +1,10 @@
 .narratorBox {
     position: absolute;
-    top: 5%;
+    top: 15%;
     left: 0;
     right: 0;
     font-size: 1.5rem;
+    font-weight: bold;
     text-shadow: 0 0 8px #00ff00;
     width: 100%;
     padding: 1rem 0;
