--- a/DarkAccess/Front-End/src/Pages/Welcome/Welcome.module.css
+++ b/DarkAccess/Front-End/src/Pages/Welcome/Welcome.module.css
@@ -80,3 +80,12 @@
     gap: 2.5rem;
     margin-top: 2.5rem;
 }
+
+.welcomeText {
+    font-size: 2rem;
+    color: #00ff00;
+    text-shadow: 0 0 10px #00ff00;
+    margin-bottom: 3rem;
+    letter-spacing: 1px;
+    font-family: 'Courier New', Courier, monospace;
+}
